--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="css/other.css">
 	</head>
 	<body onload="init()" >
-		<table style="border-collapse: collapse;color: #fff">
+		<table style="border-collapse: collapse;color: #fff;">
 			<tr>
 				<td></td>
 				<td><a href="#" class="tooltip"> <img src="img/help.png"/> Hover here to see Tipps! <span> <b>How To</b>
@@ -203,7 +203,7 @@
 				<br />
 				</td>
 				<td valign="top">
-				<div id="canvas-wrap">
+				<div id="canvas-wrap" style="height:600px; ">
 					<canvas id="drawcanvas" width='1000' height='600'>
 						Your Browser does not support this HTML5-game :(
 						<br />
